--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap" rel="stylesheet">
 
 <head>
     <meta charset="UTF-8">
@@ -25,19 +27,23 @@
     <div id="wrapper" class="flex flex-col justify-between h-screen">
 
         <!-- header-->
-        <div class="bg-white py-4 shadow dark:bg-gray-800">
+        <div class="bg-black py-4 shadow dark:bg-gray-800">
             <div class="max-w-6xl mx-auto">
 
 
                 <div class="flex items-center lg:justify-between justify-around">
 
                     <a href="trending.html">
-                        <b><h1 style="font-size: 1.5rem;">Fabrik</h1></b>
+                        <b><h1 style="
+                        font-size: 3rem;
+                        font-family: Tiny5, serif;
+                        color: rgb(12, 168, 211)
+                        ">Fabrik</h1></b>
                     </a>
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
                         
-                        <a href="/signin" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
+                        <a href="/signin" class="bg-white px-6 py-3 rounded-md shadow text-black">Login</a>
                     </div>
 
                 </div>
