--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Muli:300,400,400i,500,700,800');
 @import url('https://fonts.googleapis.com/css?family=Satisfy');
+@import url('https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap');
+
 @font-face {
     font-family: calibri;
     
