--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap" rel="stylesheet">
 
 <head>
     <meta charset="UTF-8">
@@ -20,6 +23,12 @@
 <body>
 
             <header>
+                <b><h1 style="
+                    font-family: Tiny5, serif;
+                    font-size: 3rem; 
+                    color: rgb(12, 168, 211);
+                    padding-left: 20px
+                ">Fabrik</h1></b>
                 <div class="header_inner">
                     <div class="left-side">
                         <!-- Logo -->
@@ -46,18 +55,24 @@
 
                     </div>
                     <div class="right-side lg:pr-4">
-                         <!-- upload -->
+                        <!-- create outfit -->
                         <a href="#"
                             class="bg-pink-500 flex font-bold hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white">
                             <ion-icon name="add-circle" class="-mb-1
-                             mr-1 opacity-90 text-xl uilus-circle"></ion-icon> Upload Pics
+                             mr-1 opacity-90 text-xl uilus-circle"></ion-icon> Create Outfit
+                        </a>
+                         <!-- upload clothes -->
+                        <a href="#"
+                            class="bg-pink-500 flex font-bold hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white">
+                            <ion-icon name="add-circle" class="-mb-1
+                             mr-1 opacity-90 text-xl uilus-circle"></ion-icon> Upload Clothes
                         </a>
                          <!-- upload dropdown box -->
                         <div uk-dropdown="pos: top-right;mode:click ; animation: uk-animation-slide-bottom-small" class="header_dropdown">
     
-                            <!-- notivication header -->
+                            <!-- notification header -->
                             <div class="px-4 py-3 -mx-5 -mt-4 mb-5 border-b">
-                                <h4>Upload Pics</h4>
+                                <!-- <h4>Upload Clothes</h4> -->
                             </div>
     
                             <!-- notification contents -->
@@ -74,7 +89,7 @@
 
                                     <form action="upload" method="POST" enctype="multipart/form-data">
                                     {% csrf_token %}
-                                    <p class="my-3 leading-6"> Upload pics
+                                    <p class="my-3 leading-6"> Upload Clothes
                                     </p>
                                     <div>
                                         <input type="file" name="image_upload">
@@ -176,8 +191,9 @@
                         </a>
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
-                                <li><a href="settings"> Account setting </a> </li>
-                                <li><a href="explore.html">explore </a> </li>
+                                <li><a href="profile1"> Profile </a> </li>
+                                <li><a href="settings"> Account settings </a> </li>
+                                <!-- <li><a href="explore.html">explore </a> </li> -->
                                 <li><a href="#"> Help </a> </li>
                                 <li><a href="logout"> Log Out</a></li>
                             </ul>
@@ -754,7 +770,7 @@
                             <div class="divide-gray-300 divide-gray-50 divide-opacity-50 divide-y px-4 ">
                                 <div class="flex items-center justify-between py-3">
                                     <div class="flex flex-1 items-center space-x-4">
-                                        <a href="profile.html">
+                                        <a href="profile">
                                             <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}" class="bg-gray-200 rounded-full w-10 h-10">
                                         </a>
                                         <div class="flex flex-col">
@@ -767,7 +783,7 @@
                                 </div>
                                 <div class="flex items-center justify-between py-3">
                                     <div class="flex flex-1 items-center space-x-4">
-                                        <a href="profile.html">
+                                        <a href="profile">
                                             <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" class="bg-gray-200 rounded-full w-10 h-10">
                                         </a>
                                         <div class="flex flex-col">
@@ -779,7 +795,7 @@
                                 </div>
                                 <div class="flex items-center justify-between py-3">
                                     <div class="flex flex-1 items-center space-x-4">
-                                        <a href="profile.html">
+                                        <a href="profile">
                                             <img src="{% static 'assets/images/avatars/avatar-5.jpg' %}" class="bg-gray-200 rounded-full w-10 h-10">
                                         </a>
                                         <div class="flex flex-col">
@@ -791,7 +807,7 @@
                                 </div>
                                 <div class="flex items-center justify-between py-3">
                                     <div class="flex flex-1 items-center space-x-4">
-                                        <a href="profile.html">
+                                        <a href="profile">
                                             <img src="{% static 'assets/images/avatars/avatar-7.jpg' %}" class="bg-gray-200 rounded-full w-10 h-10">
                                         </a>
                                         <div class="flex flex-col">
