--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rozha+One&family=Tiny5&family=VT323&display=swap" rel="stylesheet">
 
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@
                     <a href="trending.html">
                         <b><h1 style="
                         font-size: 3rem;
-                        font-family: Tiny5, serif;
+                        font-family: Rozha One, serif;
                         color: rgb(12, 168, 211)
                         ">Fabrik</h1></b>
                     </a>
