--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rozha+One&family=Tiny5&family=VT323&display=swap" rel="stylesheet">
+
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +25,7 @@
 
             <header>
                 <b><h1 style="
-                    font-family: Tiny5, serif;
+                    font-family: Rozha One, serif;
                     font-size: 3rem; 
                     color: rgb(12, 168, 211);
                     padding-left: 20px
