--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,7 +5,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rozha+One&family=Tiny5&family=VT323&display=swap" rel="stylesheet">
 
 
 <head>
@@ -36,7 +36,7 @@
 
                     <a href="trending.html">
                        <b><h1 style="
-                        font-family: Tiny5, serif;
+                        font-family: Rozha One, serif;
                         font-size: 3rem; 
                         color: rgb(12, 168, 211);
                         /* padding-left: 10px */
