--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,10 @@
             <header>
                 <b><h1 style="
                     font-family: Rozha One, serif;
-                    font-size: 3rem; 
-                    color: rgb(12, 168, 211);
+                    font-size: 3.5rem; 
+                    color: rgb(14, 166, 133);
                     padding-left: 20px
-                ">Fabrik</h1></b>
+                ">fabrik</h1></b>
                 <div class="header_inner">
                     <div class="left-side">
                         <!-- Logo -->
