fixed bio and location updating

--- a/templates/setting.html
+++ b/templates/setting.html
@@ -65,11 +65,12 @@
                             </div>
                             <div class="col-span-2">
                                 <label for="about">Bio</label>  
-                                <textarea id="about" name="bg-gradient-to-t" rows="3"  class="shadow-none bg-gray-100">{{user_profile.bio}}</textarea>
+                                <textarea id="about" name="bio" rows="3"  class="shadow-none bg-gray-100"> {{user_profile.bio}}</textarea>
+                                <!-- <input type="text" name = "bio" rows="3" value="{{user_profile.bio}}" class="shadow-none bg-gray-100"> -->
                             </div> 
                             <div class="col-span-2">
                                 <label for=""> Location</label>
-                                <input type="text" name = "location" value="{{user_profile.locationy}}" class="shadow-none bg-gray-100">
+                                <input type="text" name = "location" value="{{user_profile.location}}" class="shadow-none bg-gray-100">
                             </div>
                             <!-- <div>
                                <label for=""> Working at</label>
