--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,11 @@
 
 <body>
 
-            <header>
+            <header style ="background:#3eac8bff">
                 <b><h1 style="
                     font-family: Rozha One, serif;
                     font-size: 3.5rem; 
-                    color: rgb(14, 166, 133);
+                    color:  #f6f4ebff;
                     padding-left: 20px
                 ">fabrik</h1></b>
                 <div class="header_inner">
@@ -35,7 +35,7 @@
                         <!-- Logo -->
                         <div id="logo" class=" uk-hidden@s">
                             <a href="home.html">
-                                <b><h1 style="text-transform: uppercase;">Social Book</h1></b>
+                                <b><h1 style="text-transform: uppercase;">Fabrik</h1></b>
                             </a>
                         </div>
 
@@ -44,7 +44,7 @@
                         </div>-->
 
                         <div class="header_search">
-                            <input type="text" placeholder="Search for username..">
+                            <input type="text" placeholder="Search for username.." style="color: #f6f4ebff">
                             <div class="icon-search">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor">
@@ -195,7 +195,7 @@
                                 <li><a href="profile1"> Profile </a> </li>
                                 <li><a href="settings"> Account settings </a> </li>
                                 <!-- <li><a href="explore.html">explore </a> </li> -->
-                                <li><a href="#"> Help </a> </li>
+                                <!-- <li><a href="#"> Help </a> </li> -->
                                 <li><a href="logout"> Log Out</a></li>
                             </ul>
                         </div>
