--- a/templates/setting.html
+++ b/templates/setting.html
@@ -16,9 +16,33 @@
 
 </head>
 
-<body>
+<body style ="background:#f6f4ebff">
+
+    <div id="wrapper" class="flex flex-col justify-between h-screen">
+
+        <!-- header-->
+        <div class="py-4 shadow dark:bg-gray-800" style ="background:#3eac8bff">
+            <div class="max-w-6xl mx-auto">
 
 
+                <div class="flex items-center lg:justify-between justify-around">
+
+                    <a href="trending.html">
+                       <b><h1 style="
+                        font-family: Rozha One, serif;
+                        font-size: 3.5rem; 
+                        color: #f6f4ebff;
+                        ">fabrik</h1></b>
+                    </a>
+
+                    <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
+                        
+                        <a href="/" class="bg-white px-6 py-3 rounded-md shadow text-black">Home</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
        
 
           
@@ -30,10 +54,10 @@
                     <li class="uk-active"><a href="#">General</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Notification</a></li>
-                    <li><a href="#">Social links</a></li>
+                    <li><a href="#">Notifications</a></li>
+                    <!-- <li><a href="#">Social links</a></li> -->
                     <!-- <li><a href="#">Billing</a></li> -->
-                    <li><a href="#">Security</a></li>
+                    <!-- <li><a href="#">Security</a></li> -->
                 </ul>
 
                 <div class="grid lg:grid-cols-3 mt-12 gap-8">
