--- a/templates/signin.html
+++ b/templates/signin.html
@@ -22,13 +22,13 @@
 
 </head>
 
-<body style = "background-color: rgb(185, 185, 185);">
+<body style = "background-color: #f6f4ebff;">
 
 
     <div id="wrapper" class="flex flex-col justify-between h-screen">
 
         <!-- header-->
-        <div class="py-4 shadow dark:bg-gray-800" style ="background:rgb(34, 34, 35)">
+        <div class="py-4 shadow dark:bg-gray-800" style ="background:#3eac8bff">
             <div class="max-w-6xl mx-auto">
 
 
@@ -36,9 +36,9 @@
 
                     <a href="trending.html">
                        <b><h1 style="
-                        font-family: Rozha One, serif;
+                        font-family: Rozha One, serif, bold;
                         font-size: 3.5rem; 
-                        color: rgb(14, 166, 133);
+                        color: #f6f4ebff;
                         ">fabrik</h1></b>
                     </a>
 
@@ -91,17 +91,17 @@
                     font-size: 2rem; 
                     font-family: arial;
                     font-weight: bold;
-                    color: rgb(14, 166, 133);
+                    color: #f6f4ebff;
                     display: inline-block;
                     padding: 10px;
-                    border: 3px solid black;
-                    background: rgb(34, 34, 35);
+                    border: 3px solid #3eac8bff;
+                    background: #3eac8bff;
                     border-radius: 12px;
                     " 
                     class="blue py-3 rounded-md text-white text-xl w-full"
                     >Submit</button>
                     <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Not registered? <a href="/signup" class=""> Create an account </a></p>
+                        <p class="text-base"> Not registered? <a href="/signup" class=""> <u>Create an account</u> </a></p>
                     </div>
                 </form>
             </div>
@@ -117,7 +117,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <!-- <p class="capitalize"> © copyright 2020 by socol</p> -->
             </div>
         </div>
 
