--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,13 +21,13 @@
 
 </head>
 
-<body style = "background-color: rgb(185, 185, 185);">
+<body style = "background-color: #f6f4ebff;">
 
 
     <div id="wrapper" class="flex flex-col justify-between h-screen">
 
         <!-- header-->
-        <div class="bg-black py-4 shadow dark:bg-gray-800" style ="background:rgb(34, 34, 35)">
+        <div class="bg-black py-4 shadow dark:bg-gray-800" style ="background:#3eac8bff">
             <div class="max-w-6xl mx-auto">
 
 
@@ -37,7 +37,7 @@
                         <b><h1 style="
                         font-size: 3.5rem;
                         font-family: Rozha One, serif;
-                        color: rgb(14, 166, 133)
+                        color: #f6f4ebff
                         ">fabrik</h1></b>
                     </a>
 
@@ -58,10 +58,10 @@
                 font-family: Helvetica;
                 font-size: 2.5rem;
                 font-weight: bold;
-                color: rgb(14, 166, 133);
+                color: #3eac8bff;
 
                 "
-                > Log in</h1>
+                > Create an Account</h1>
                 
                 <div>
                     <style>
@@ -88,7 +88,7 @@
                     <div class="flex justify-start my-4 space-x-1">
                         <div class="checkbox">
                             <input type="checkbox" id="chekcbox1" checked>
-                            <label for="chekcbox1"><span class="checkbox-icon"></span> I Agree</label>
+                            <label for="chekcbox1"><span class="checkbox-icon"></span> I Agree to the</label>
                         </div>
                         <a href="#"> Terms and Conditions</a>
                     </div>
@@ -96,17 +96,17 @@
                     font-size: 2rem; 
                     font-family: arial;
                     font-weight: bold;
-                    color: rgb(14, 166, 133);
+                    color: #f6f4ebff;
                     display: inline-block;
                     padding: 10px;
-                    border: 3px solid black;
-                    background: rgb(34, 34, 35);
+                    border: 3px solid #3eac8bff;
+                    background: #3eac8bff;
                     border-radius: 12px;
                     
                     " 
                     class="rounded-md text-white text-xl to-red-400 w-full">Sign Up</button>
                     <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Do you have an account? <a href="/signin"> Login </a></p>
+                        <p class="text-base"> Already have an account? <a href="/signin"> <u>Log In </u></a></p>
                     </div>
                 </form>
             </div>
@@ -122,7 +122,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <!-- <p class="capitalize"> © copyright 2020 by socol</p> -->
             </div>
         </div>
 
